# Customer-Support-Ticket-Theme-Discovery-using-BERTopic-and-LLM

./: .gitignore  AGENTS.md  PLAN.md  README.md  SPEC.md  main.py  pyproject.toml
output/: topic_insights.csv
output/bertopic_model/: config.json  ctfidf_config.json  topics.json
src/: __init__.py  config.py
src/analysis/: __init__.py  insights.py
src/visualization/: charts.py
