[project]
name = "bert-embedding-llm-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.4",
    "numpy>=2.4.2",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
